2021-06-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftlint] Improve error reporting.

	* src/ftlint.c (main): Decorate error messages.
	(Error): Take a prefix message argumemt.

2021-06-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftlint.c (main): Use `ft_basename'.

2021-06-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftlint] Improve error handling.

	* src/ftlint.c (main): Never panic, call `Error', and proceed.
	(Error): Desipher and print an error message instead of...
	(Panic): ...removed.

2021-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftlint.c (main): Fix signed/unsigned mismatch.

2021-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftlint.c (main): Fortify custom indexing.

2021-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftlint.c (main, Analyze): Fix signed/unsigned mismatch.

2021-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftlint] Handle font collections.

	* src/ftlint.c (main): Increment face_index when possible.

2021-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftlint] Introduce quiet mode, remove extension guessing.

	With so many supported font formats, it does not make sense to guess
	the `ttf' or `ttc' extensions.

	* src/ftlint.c (main): Add `-q' option and improve output formatting;
	remove extension guessing.
	(Usage): Document it.

2021-06-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Glyfs, Print_Programs): Handle empty glyphs.

2021-06-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftlint] Report integral X- and Y-acutance.

	Acutance is a measure of how quickly the intensity changes between
	the minimum and maximum value at the edges.  We calculate is as a
	ratio of the integrals for the absolute second derivative and the
	absolute first derivative.  It equals to 2.0 for bitmap fonts and
	approaches this value for well-hinted fonts.

	* src/ftlint.c (Analyze): Implement it.
	(main): Use it.
