@@ -1,3 +1,11 @@
+2021-06-30  Werner Lemberg  <wl@gnu.org>
+
+	[ftlint] Improve output.
+
+	* src/ftlint.c (main): Add header to output and remove repetitive
+	strings.
+	(Analyze): Updated.
+
 2021-06-22  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	[ftlint] Improve error reporting.
